--- a/.github/workflows/terraform_ai_bau.yml
+++ b/.github/workflows/terraform_ai_bau.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Commit and push changes if any
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.email "github-actions[bot]@*******.noreply.github.com"
           git add terraform-modules/
           git commit -m "chore: auto-patch terraform modules [skip ci]" || echo "No changes to commit"
           git push || echo "No changes to push"
